# boatflix2

./: .env.example  .env.macbook-remote  .gitignore  COPY_KEY_TO_PI.md  DEPLOY.md  ENABLE_SSH_INSTRUCTIONS.md  FINAL_SETUP_STEPS.md  MACBOOK_SETUP_COMPLETE.md  QUICKSTART.md  README.md  README_REMOTE_TRANSCODE.md  REMOTE_TRANSCODE_SETUP.md  REMOTE_TRANSCODE_SUMMARY.md  YOUTUBE_COOKIES_SETUP.md  YOUTUBE_SETUP.md  auto-push-monitor.sh  boatflix-deploy.service  boatflix-deploy.timer  copy-key-to-pi.sh  deploy.sh  docker-compose.yml  env.remote-transcode.example  resilient_copy.sh  setup.sh  verify-macbook-setup.sh
fastapi-manager/: Dockerfile  config.py  database.py  main.py  pyproject.toml  requirements.txt  run_migration.py  test_youtube_setup.py
fastapi-manager/models/: __init__.py  db.py  download.py  youtube.py  youtube_simple.py
fastapi-manager/routers/: download.py  organize.py  process.py  sync.py  transcode.py  web.py  youtube.py  youtube_simple.py
fastapi-manager/services/: download_queue.py  jellyfin.py  metadata.py  organizer.py  pyscenedetect.py  rclone.py  remote_transcode.py  transcode.py  transcode.py.bak  youtube_api.py  youtube_extractor.py  youtube_sync.py  youtube_sync_simple.py  ytdlp.py
fastapi-manager/static/: app.js  style.css
fastapi-manager/templates/: base.html  dashboard.html  download.html  organize.html  sync.html  transcode.html  youtube.html  youtube_detail.html
fastapi-manager/templates/components/: file_browser.html  metadata_form.html
nginx/: default.conf  nginx.conf
qbittorrentvpn/: Dockerfile  README.md  tinyproxy.conf
(+12 files in other folders)
